syntax = "proto3";
package realms;
import "dto.proto";
option java_multiple_files = true;
option java_package = "com.sitech.token";

service TokenService {
  rpc getUserToken (UserAccessTokenRequest) returns (UserAccessTokenResponse) {};
}

message UserAccessTokenRequest{
  string userName = 1;
  string userPass = 2;
}

message UserAccessTokenResponse{
  com.sitech.dto.UserAccessTokenDto userAccessTokenDto =1;
}